# elcortify-backend

./: .env  .gitignore  README.rst  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
elcortify/: schema.py
elcortify/core/filters/: filters.py
elcortify/graphql/: filters.py  schema.py
elcortify/graphql/tests/: test_graphql.py
elcortify/products/: admin.py  apps.py  managers.py  models.py
elcortify/products/migrations/: 0001_initial.py
elcortify/products/tests/: factories.py
listify/: schema.py
listify/core/tests/: factories.py
listify/lists/: admin.py  apps.py  models.py
listify/lists/migrations/: 0001_initial.py
listify/lists/tests/: factories.py  test_models.py
